# fprotocol

./: .gitignore  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
example/circle_c/: ExampleProto.c  ExampleProto.h  TestMain.c
example/circle_py/: TestMain.py  exampleptoto.py  fprotocol.py
example/serialcan/: serial_can.py  test.py
examples/: test_codegen.py
examples/01_esp32_led/esp32/: platformio.ini
examples/01_esp32_led/esp32/lib/FProtocol/: README.md  RobotProto.cpp  fprotocol.cpp
examples/01_esp32_led/esp32/src/: main.cpp
examples/01_esp32_led/server_py/: fprotocol.py  robot_proto.py  robot_ros2_serial.py  robot_ros2_udp.py  serial_server.py  simple_server.py  test_robot_proto.py
examples/02_esp32_led_udp/esp32/lib/FProtocol/: README.md  Robot.fproto  RobotProto.h  fprotocol.cpp  fprotocol.h
examples/02_esp32_led_udp/esp32/src/: main.cpp
examples/02_esp32_led_udp/server_py/: robot_proto.py
examples/03_esp32_odom_cmd_vel/esp32/lib/FProtocol/: Robot.fproto  RobotProto.cpp  RobotProto.h  fprotocol.cpp  robot_proto.py
examples/03_esp32_odom_cmd_vel/esp32/src/: main.cpp
examples/03_esp32_odom_cmd_vel/server_py/: README.md  Robot.fproto  SERIAL_README.md  fprotocol.py  serial_server.py  serial_server_ros2.py  test_serial.py
examples/03_esp32_odom_cmd_vel/server_ros2_cpp/server_ros2_cpp/: CMakeLists.txt  package.xml
examples/03_esp32_odom_cmd_vel/server_ros2_cpp/server_ros2_cpp/src/: server_ros2_cpp_node.cpp
examples/03_esp32_odom_cmd_vel/server_ros2_cpp/server_ros2_cpp/src/fprotocol/: Robot.fproto  RobotProto.cpp  fprotocol.cpp
examples/circle_c/: Robot.fproto  TestMain.c
examples/circle_cpp/: CMakeLists.txt  Robot.fproto  RobotProto.cpp  RobotProto.hpp  TestRobotMain.cpp  fprotocol.cpp  fprotocol.hpp  fprotocol.py  robot_proto.py  robot_ros2_serial.py  robot_ros2_udp.py
examples/circle_py/: exampleptoto.py  fprotocol.py
examples/example_ros2_cpp/example_ros2_udp/: CMakeLists.txt  package.xml
examples/example_ros2_cpp/example_ros2_udp/src/: RobotProto.h  RobotProto.hpp  fprotocol.h
examples/udp_cpp/: CMakeLists.txt  Robot.fproto  RobotMain.cpp  TestRobotMain.cpp
examples/udp_cpp/back/: RobotProto.cpp  TestRobotMain.cpp  fprotocol.cpp  fprotocol.hpp
src/: fprotocol.c  fprotocol.h  fprotocol.py
src/fprotocol/: __init__.py  fprotocol.c  fprotocol.cpp  fprotocol.h  fprotocol.hpp  fprotocol.py
src/fprotocol/tools/: README.md  __init__.py  cli.py  gencode_c.py  gencode_cpp.py  gencode_cpp_ros2_udp.py  gencode_cpp_udp.py  gencode_py.py  gencode_py_ros2.py  gencode_py_ros2_udp.py
tool/: Example.fproto  README.md  gencode_c.py  gencode_py.py
